lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_base64_enc/buffer_append_base64_enc3/buffer_append_base64_enc3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_base64_enc/buffer_append_base64_enc3/buffer_append_base64_enc3.c:40:52: error: use of undeclared identifier 's__out'; did you mean 'stdout'?
    char * futag_target = buffer_append_base64_enc(s__out ,str_in ,sz_in_length ,e_charset ,b_pad );
                                                   ^~~~~~
                                                   stdout
/usr/include/stdio.h:144:14: note: 'stdout' declared here
extern FILE *stdout;            /* Standard output stream.  */
             ^
1 error generated.
